k8s/day-4/secure-pod-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod-v2
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: app
      image: busybox
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: true
      volumeMounts:
        - name: tmp
          mountPath: /tmp              # Only /tmp is writable
  volumes:
    - name: tmp
      emptyDir: {}                     # Temporary storage (pod lifetime)
